# investigraph-prefect

./: .pre-commit-config.yaml  pyproject.toml
investigraph/: cli.py
investigraph/logic/: fetch.py
