[project]
name = "investigraph"
version = "0.6.1"
description = "etl pipeline for investigations with follow the money data"
authors = [{ name = "Simon Wörpel", email = "simon.woerpel@pm.me" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11,<4"
dependencies = [
    "anystore (>=0.2.2,<0.3.0)",
    "ftmq (>=0.7.1,<0.8.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "prefect (>=3.1.12,<4.0.0)",
    "runpandarun (>=0.5.2,<0.6.0)",
    "fakeredis (>=2.26.2,<3.0.0)",
    "pantomime (>=0.6.1,<0.7.0)",
]

[project.scripts]
investigraph = "investigraph.cli:cli"

[project.urls]
Homepage = "https://investigraph.dev"
Repository = "https://github.com/investigativedata/investigraph-etl"
Documentation = "https://docs.investigraph.dev"
Issues = "https://github.com/investigativedata/investigraph-etl/issues"

[tool.poetry.group.dev.dependencies]
pytest-env = ">=1.1.1"
pytest = ">=7.4.3,<9.0.0"
pytest-cov = ">=4.1,<7.0"
black = ">=23.11,<25.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = ">=3.5,<5.0"
flake8 = ">=6.1,<8.0"
pytest-xdist = "^3.4.0"
bump2version = "^1.0.1"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
DEBUG = 1
PREFECT_HOME = ".test"
INVESTIGRAPH_REDIS = 0
INVESTIGRAPH_DATA_ROOT = ".test"
